# drf-blog

./: .gitignore  README.md  docker-compose.dev.yml  pyproject.toml
src/api/: mixins.py  pagination.py  urls.py
src/authentication/: urls.py
src/blog/: admin.py  apis.py  filters.py  models.py  urls.py
src/blog/migrations/: 0001_initial.py
src/blog/selectors/: articles.py
src/blog/services/: articles.py
src/config/: knox.py  urls.py
src/config/settings/: base.py  development.py
src/users/: apis.py  models.py  selectors.py  services.py  urls.py
src/users/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_alter_user_username.py
src/users/tests/: test_user_creation.py
