[tool.poetry]
name = "drf-blog"
version = "0.1.0"
description = ""
authors = ["mojtabangh <mojtaba83ngh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
drf-spectacular = "^0.28.0"
python-decouple = "^3.8"
djangorestframework-simplejwt = "^5.5.0"
django-filter = "^25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
